Forget Password Done

--- a/src/main/resources/templates/UserHome.html
+++ b/src/main/resources/templates/UserHome.html
@@ -136,7 +136,7 @@
         </script>
     </head>
 
-    <body onload="getCities(),sendmail()">
+    <body onload="getCities()">
 
         <!-- page wrapper -->
         <div class="mil-page-wrapper">
