User Nav Bar Unless Updated on all User Pages and applied User Header

--- a/src/main/resources/templates/UserHeader.html
+++ b/src/main/resources/templates/UserHeader.html
@@ -18,6 +18,7 @@
                     </div>
                 </div>
                 <div class="mil-top-panel">
+                    <h1>If mai HUUU</h1>
                     <div class="container">
                         <div class="mil-tp-content">
                             <div class="mil-left">
@@ -80,7 +81,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="contact.html">Contact</a>
+                                        <a href="/Userlogout">Logout</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -140,6 +141,7 @@
                     </div>
                 </div>
                 <div class="mil-top-panel">
+                    <h1>Else Mai HUU</h1>
                     <div class="container">
                         <div class="mil-tp-content">
                             <div class="mil-left">
@@ -150,59 +152,38 @@
                             </div>
                             <nav class="mil-main-menu">
                                 <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
-<!--                                    <li class="mil-has-children mil-current">
-                                        <a href="#">Home</a>
+                                    <li class="mil-has-children mil-current">
+                                        <a href="#">Admin</a>
                                         <ul>
                                             <li>
-                                                <a href="home-1.html">Home type 1</a>
-                                            </li>
-                                            <li>
-                                                <a href="home-2.html">Home type 2</a>
-                                            </li>
-                                            <li>
-                                                <a href="home-3.html">Home type 3</a>
-                                            </li>
-                                            <li>
-                                                <a href="home-4.html">Home type 4</a>
-                                            </li>
-                                            <li>
-                                                <a href="home-5.html">Home type 5</a>
-                                            </li>
-                                        </ul>
-                                    </li>-->
-                                    <li class="mil-has-children">
-                                        <a href="#">Services</a>
-                                        <ul>
-                                            <li>
-                                                <a href="services.html">Services</a>
-                                            </li>
-                                            <li>
-                                                <a href="service-1.html">Single service type 1</a>
-                                            </li>
-                                            <li>
-                                                <a href="service-2.html">Single service type 2</a>
-                                            </li>
-                                            <li>
-                                                <a href="subscription.html">Subscription</a>
-                                            </li>
-                                            <li>
-                                                <a href="calculator.html">Price Calculator</a>
+                                                <a href="/AdminLogin">Admin Login</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="#">Blog</a>
+                                        <a href="#">Vendor</a>
                                         <ul>
                                             <li>
-                                                <a href="blog.html">Blog list</a>
+                                                <a href="/VendorSignUp">Vendor Sign Up</a>
                                             </li>
                                             <li>
-                                                <a href="publication.html">Publication</a>
+                                                <a href="/VendorLogin">Vendor Login</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="mil-has-children">
+                                        <a href="#">User</a>
+                                        <ul>
+                                            <li>
+                                                <a href="/UserSignUp">User Sign Up</a>
+                                            </li>
+                                            <li>
+                                                <a href="/UserLogin">User Login</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="contact.html">Contact</a>
+                                        <a href="/Userlogout">Logout</a>
                                     </li>
                                 </ul>
                             </nav>
