--- a/src/main/resources/templates/UserLogin.html
+++ b/src/main/resources/templates/UserLogin.html
@@ -183,125 +183,9 @@
         <div class="mil-page-wrapper">
 
             <!-- static content -->
-            <div class="mil-preloader-frame">
-                <div class="mil-preloader-content">
-                    <img src="img/ui/logo.png" alt="logo">
-                    <div class="mil-preloader">
-                        <div class="mil-preload-line"></div>
-                    </div>
-                    <div class="mil-fs-18 mil-pre-text mil-m-1 mil-fw-600">loading: <span class="mil-percent">00</span> %</div>
-                </div>
-            </div>
-            <div class="mil-top-panel">
-                <div class="container">
-                    <div class="mil-tp-content">
-                        <div class="mil-left">
-                            <a href="#top" class="mil-logo mil-hover-bri-105" style="width: 16rem">
-                                <img src="img/ui/logo.png" alt="logo">
-                                <img src="img/ui/logo-light.png" alt="logo" class="mil-light">
-                            </a>
-                        </div>
-                        <nav class="mil-main-menu">
-                            <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
-                                <li class="mil-has-children">
-                                    <a href="#">Home</a>
-                                    <ul>
-                                        <li>
-                                            <a href="home-1.html">Home type 1</a>
-                                        </li>
-                                        <li>
-                                            <a href="home-2.html">Home type 2</a>
-                                        </li>
-                                        <li>
-                                            <a href="home-3.html">Home type 3</a>
-                                        </li>
-                                        <li>
-                                            <a href="home-4.html">Home type 4</a>
-                                        </li>
-                                        <li>
-                                            <a href="home-5.html">Home type 5</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="mil-has-children">
-                                    <a href="#">Services</a>
-                                    <ul>
-                                        <li>
-                                            <a href="services.html">Services</a>
-                                        </li>
-                                        <li>
-                                            <a href="service-1.html">Single service type 1</a>
-                                        </li>
-                                        <li>
-                                            <a href="service-2.html">Single service type 2</a>
-                                        </li>
-                                        <li>
-                                            <a href="subscription.html">Subscription</a>
-                                        </li>
-                                        <li>
-                                            <a href="calculator.html">Price Calculator</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="mil-has-children">
-                                    <a href="#">Blog</a>
-                                    <ul>
-                                        <li>
-                                            <a href="blog.html">Blog list</a>
-                                        </li>
-                                        <li>
-                                            <a href="publication.html">Publication</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="mil-current">
-                                    <a href="contact.html">Contact</a>
-                                </li>
-                            </ul>
-                        </nav>
-                        <div class="mil-right mil-jce">
-                            <div class="mil-tp-phone mil-aic mil-mr-60 mil-sm-mr-15">
-                                <i class="far fa-mobile mil-icon mil-sm mil-bg-a-2 mil-m-4 mil-mr-15 mil-sm-hidden" style="padding-top: .2rem"></i>
-                                <a href="tel:+380123456789" class="mil-fw-600" data-no-swup>+1 (049) 129-45X7</a>
-                            </div>
-                            <a href="contact.html" class="mil-btn mil-lg mil-bg-a-1 mil-br-xl mil-hover-bri-105 mil-icon-btn mil-hover-scale mil-md-hidden"><span>Clean now</span><i class="far fa-magic mil-bg-m-1 mil-a-1"></i></a>
-                            <div class="mil-menu-btn">
-                                <span></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="mil-right-buttons-frame">
-                <div class="mil-order-call-window">
-                    <div class="mil-ocw-content">
-                        <div class="row mil-aic">
-                            <div class="col-lg-7">
-                                <form>
-                                    <h4 class="mil-fs-28 mil-mb-30">Leave your number, <br>and we'll call you back</h4>
-                                    <div class="mil-input-frame mil-mb-15">
-                                        <input type="text" id="user-name-2" name="user-name" placeholder="Name" class="mil-br-md mil-bg-m-3" autocomplete="name">
-                                        <i class="far fa-user mil-a-2"></i>
-                                    </div>
-                                    <div class="mil-input-frame mil-mb-30">
-                                        <input type="tel" id="user-phone-2" name="user-tel" class="mil-phone-input mil-br-md mil-bg-m-3" placeholder="+38 (___) ___-__-__" autocomplete="tel">
-                                        <i class="far fa-mobile mil-a-2"></i>
-                                    </div>
-                                    <button class="mil-btn mil-bg-a-1 mil-icon-btn mil-br-xl mil-hover-bri-105 mil-hover-scale" type="submit">Order a call<i class="far fa-arrow-right mil-bg-m-1 mil-a-1"></i></button>
-                                </form>
-                            </div>
-                            <div class="col-lg-5">
-                                <img src="img/ui/cc.jpg" alt="callcenter" class="mil-ocw-img mil-br-sm">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="mil-right-buttons">
-                    <a href="#top" class="mil-side-btn mil-back-to-top mil-hover-bri-120">
-                        <i class="far fa-arrow-up mil-a-1"></i>
-                    </a>
-                    <button class="mil-side-btn mil-open-window mil-hover-bri-120"></button>
-                </div>
+            <!-- static content -->
+            <div th:replace="UserHeader :: header">
+
             </div>
             <div class="mil-discount-popup">
                 <div class="mil-popup-window">
